2007-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  AMD64 target fixes for symbols builds.
	* win/rules.vc:

2007-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclLink.c (Tcl_UpdateLinkedVar): guard against var being
	unlinked. [Bug 1740631] (maros)

2007-08-25  Kevin Kenny  <kennykb@acm.org>

	* generic/tclClock.c (FormatClock): Claimed additional space for
	the %c format code to avoid a buffer overrun when formatting
	(for example) a Friday in February in the Portuguese locale.
	[Bug 1751117]
	
2007-08-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c: replaced copy loop that tripped some
	compilers with memmove [Bug 1780870]

2007-08-14  Don Porter  <dgp@users.sourceforge.net>

	* tests/trace.test:	Backport some tests.

2007-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclLoadDyld.c: use dlfcn API on Mac OS X 10.4 and later; fix
	issues with loading from memory on intel and 64bit; add debug messages.

	* tests/load.test: add test load-10.1 for loading from vfs.

2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEnv.c:	improve environ handling on Mac OS X (adapted
	* unix/tclUnixPort.h:	from Apple changes in Darwin tcl-64).

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes;
	support overriding TCL_PACKAGE_PATH in environment.

	* unix/configure: autoconf-2.13

2007-07-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParse.c:	In contexts where interp and parsePtr->interp
	might be different, be sure to use the latter for error reporting.

2007-07-05  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl (unknown):	Corrected inconsistent error message
	in interactive [unknown] when empty command is invoked. [Bug 1743676]
