@@ -1,3 +1,10 @@
+2007-09-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/tcltest/tcltest.tcl:	Accept underscores and colons in
+	* library/tcltest/pkgIndex.tcl:	constraint names.  Properly handle
+	constraint expressions that return non-numeric boolean results like
+	"false".  Bump to tcltest 2.2.9. [Bug 1772989; RFE 1071322]
+
 2007-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc:  AMD64 target fixes for symbols builds.
